# triponbuddy

./: .gitignore  README.md  index.html  tailwind.config.ts
backend/: .env.example  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/models/: feedback.py  forum.py  payment.py  trip.py  user.py
backend/routers/: feedback.py  forum.py  images.py  issues.py  join_requests.py  payments.py  trips.py  upload.py  users.py
backend/services/: ai_service.py  forum_service.py  google_maps_service.py  image_service.py  issue_service.py  join_request_service.py  payment_service.py  route_service.py  trip_service.py  unsplash_service.py
backend/services/helpers/: __init__.py  ai_prompt_builder.py  ai_response_parser.py  bing_parser.py  forum_helper.py  google_maps_helper.py  image_helper.py  payment_helper.py  r2_helper.py  trip_data_helper.py  unsplash_helper.py
backend/utils/: cache.py  db_utils.py  forum_utils.py  rate_limit.py  validators.py
frontend/: .env.example  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: App.tsx  index.css
src/components/: BackgroundCarousel.tsx  CommunitySection.tsx  EnhancedFeaturesSection.tsx  ExploreDestinationsSection.tsx  FeedbackSection.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  TestimonialsSection.tsx  TripDemoSection.tsx  TripPlanningSection.tsx  VideoBackground.tsx  WhyPlanSection.tsx  WhyTriponBuddySection.tsx
src/pages/: Contact.tsx  Destinations.tsx  Index.tsx  Seasonal.tsx
(+251 files in other folders)
