[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "google-genai>=1.33.0",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.1",
    "uvicorn>=0.35.0",
    "razorpay>=2.0.0",
    "boto3>=1.40.64",
    "python-multipart>=0.0.20",
]
